assets/css/style.css
/** Google Fonts import */
@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Slab:wght@200;300;400;500;600;700&display=swap');

/* Asterisk wildcard selector to override default syles added by the browser. */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;

    /* Generic project styles */
    background-color: #ffffff;
    color: #2E4748;
    font-family: 'Roboto Slab', serif;
}

/* Header */
header {
    display: flex;
    flex-direction: column;
    background-color: rgba(0, 193, 203, .7);
    margin: 10px;
    align-items: center;
    justify-content: center;
}

/* Logo */
#logo {
    color: #2E4748;
    font-family: 'Black Ops One', sans-serif;
    letter-spacing: 3px;
    text-align: center;
    margin: 10px;
    min-width: 0;
}

/* Nav bar and collapsable menu styles */
header a {
    text-decoration: none;
    color: inherit;
}

#menu {
    font-size: 110%;
    letter-spacing: 2px;
    list-style-type: none;
    text-align: center;
    font-family: 'Black Ops One', sans-serif;
}

#menu>li {
    margin-bottom: 4px;
}

.active {
    border-bottom: 1px solid #008084;
}

/* Navbar styles with dropdown toggle */
nav {
    background-color: #C2C2C2;
    width: 85%;
    left: 0;
    padding: 10px 5px;
    box-shadow: 0 2px 2px #008084;
    display: none;
    top: 100%;
    align-self: center;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    margin-top: 10px;
    margin-bottom: 10px;
    font-family: 'Black Ops One', sans-serif;
    font-size: 120%;
    letter-spacing: 2px;
    text-align: center;
    min-width: 0;
}

/* Main section rules */

#page-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0px 10px 10px 10px;
    overflow: scroll;
    min-width: 100vw;
}

#page-content p {
    margin-bottom: 8px;
}

/* Page title banners */
#banner {
    font-family: 'Black Ops One', sans-serif;
    width: 100%;
    padding: 5px;
    margin-top: 5px;
    color: #C2C2C2;
    background-color: rgba(0, 128, 132, .8);
}

#page-content h2 {
    text-align: center;
    text-shadow: 0 2px 2px #2E4748;
}

/* Page photo */
.page-photo {
    height: 350px;
    width: 100%;
    object-fit: cover;
}

/* Page writing*/
.page-writing {
    margin: 5px;
    letter-spacing: 2px;
    font-size: 120%;
}

/* Rules list */
#rules-list {
    font-size: 80%;
    height: 50vh;
    overflow-y: scroll;
    scrollbar-width: initial;
}

/* Signup Form */
#sign-up form {
    display: flex;
    flex-direction: column;
}

.text-input {
    min-width: 100%;
    margin-bottom: 5px;
}

.date-input {
    min-width: 100%;
    margin-bottom: 5px;
}

.join-button {
    margin-top: 10px;
    margin-bottom: 10px;
    width: 120px;
    height: 50px;
    font-size: 80%;
    background-color: rgba(0, 128, 132, .8);
    color: #C2C2C2;
    text-shadow: 0 2px 2px #2E4748;
    font-family: 'Black Ops One', sans-serif;
}

/* Footer */

footer {
    display: flex;
    flex-direction: column;
    margin-top: auto;
    margin-right: 10px;
    margin-bottom: 10px;
    margin-left: 10px;
    padding: 5px;
    background-color: rgba(0, 193, 203, .7);
}

#social-media {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

/* MEDIA QUERY: TABLETS AND LARGER (768PX AND UP) */
@media screen and (min-width: 768px) {

    /* Header */
    header {
        margin-bottom: 10px;
        padding-top: 5px;
        display: flex;
        justify-content: space-evenly;
    }

    /* Navbar styles */
    nav {
        display: block;
        box-shadow: none;
        width: fit-content;
        background-color: rgba(0, 193, 203, .0);
        padding: 5px 5px;
    }

    #logo {
        margin-top: 20px;
    }

    .nav-toggle-label {
        display: none;
    }

    #nav-toggle {
        display: none;
    }

    #menu {
        display: flex;
        width: 80vw;
        font-size: 120%;
        justify-content: space-evenly;
        margin-bottom: 20px;

    }

    /* Page content */
    #page-content {
        height: 80vh;

    }

    /* Page photo */
    #page-photo-container {
        flex-grow: 2;
        justify-content: center;
        overflow: hidden;
    }

    .page-photo {
        height: 100%;
    }

    /* iframe map */
    iframe {
        width: 100vw;
    }

    /* Page title banners */
    #banner {
        font-family: 'Black Ops One', sans-serif;
        width: 100%;
        height: 7vh;
        padding: 10px;
        margin-top: 10px;
        color: #C2C2C2;
        background-color: rgba(0, 128, 132, .8);
        display: flex;
        align-items: center;
        justify-content: center;
    }

    #page-content h2 {
        text-align: center;
        text-shadow: 0 2px 2px #2E4748;
        font-size: 260%;
    }

    /* Page writing*/
    .page-writing {
        margin: 5px;
        letter-spacing: 2px;
        font-size: 120%;
        padding-top: 0px;
        font-size: 160%;
    }

    /* Rules list */
    #rules-list {
        font-size: 140%;
        height: 32vh;
        flex-shrink: 1;
    }

    /* Signup Form */
    #signup-form-container {
        display: flex;
        flex-direction: row;
        max-height: 60%;
        justify-content: center;
    }

    #signup-form {
        height: 100%;
        font-size: 120%;
        width: 70vw;
    }

    .text-input {
        min-width: 100%;
        margin-bottom: 12px;
        height: 5vh;
        font-size: 100%;
    }

    #signup-form h3 {
        margin-bottom: 10px;
    }

    .date-input {
        min-width: 100%;
        margin-bottom: 12px;
        height: 5vh;
        font-size: 100%;
    }

    .join-button {
        margin-top: 7.5px;
        width: 50vw;
        height: 7vh;
        font-size: 120%;
        background-color: rgba(0, 128, 132, .8);
        color: #C2C2C2;
        text-shadow: 0 2px 2px #2E4748;
        font-family: 'Black Ops One', sans-serif;
        margin-left: 10vw;
    }

    /* Footer */
    footer {
        justify-content: center;
        height: 65px;
    }

    #social-media {
        font-size: 160%;
    }
}

/* MEDIA QUERY: HORIZONTAL TABLETS (990PX AND UP) */
@media screen and (min-width: 990px) {

    /* Header */
    header {
        height: 13vh;
        margin-bottom: 10px;
    }

    /* Main section */

    /* Page writing*/
    .page-writing {
        padding-top: 5px;
        font-size: 130%;
    }

    /* Rules list */
    #rules-list {
        font-size: 120%;
        height: 45vh;
    }

    .page-photo {
        height: 100%;
    }

    /* Sign up form */
    #signup-form {
        height: 100%;
        font-size: 100%;
    }

    /* Footer */

    footer {
        margin-bottom: 10px;
    }
}

/* LARGE DEVICES (LAPTOPS AND DESKTOPS, 1100PX AND UP) */
@media screen and (min-width: 1100px) {

    /* Header */
    header {
        height: 15vh;
        padding-top: 10px;
    }

    /* Page content */
    .page-photo-container {
        height: 30vh;
    }

    /* Page writing */
    .page-writing {
        column-count: 2;
        column-gap: 50px;
        text-align: justify;
    }

    /* Rules list */
    #rules-list {
        column-count: 1;
        list-style-type: none;
        flex-shrink: 0.5;
        width: 70vw;
        margin-left: 15vw;
        overflow: scroll; 
    }

    /* Sign up form */
    #signup-form-container {
        max-height: 40%;
    }

    #signup-form {
        width: 800px;
    }

    .join-button {
        margin-left: 0;
        width: 800px;
    }
}

